cluster/apps/dev/code-server/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: &app code-server
  namespace: dev
  labels:
    app.kubernetes.io/name: *app
    app.kubernetes.io/instance: *app
  annotations:
    external-dns.alpha.kubernetes.io/target: "ipv4.${SECRET_DOMAIN}"
    external-dns/is-public: "true"
    cert-manager.io/cluster-issuer: "letsencrypt-production"
    hajimari.io/appName: "code server"
    hajimari.io/enable: "true"
    hajimari.io/icon: "code-braces-box"
    traefik.ingress.kubernetes.io/router.middlewares: networking-cloudflare-only@kubernetescrd
    traefik.ingress.kubernetes.io/router.entrypoints: "websecure"
spec:
  ingressClassName: "traefik"
  rules:
    - host: &host "code.${SECRET_DOMAIN}"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: *app
                port:
                  number: 80
  tls:
    - hosts:
        - *host
      secretName: "code-server-tls"
